<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/stadium"
    android:layout_margin="@dimen/activity_horizontal_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/linear_bottom_margin"
                android:background="@android:color/holo_blue_bright"
                android:orientation="vertical"
                android:padding="@dimen/linear_padding">

                <TextView
                    android:id="@+id/tv_question1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:padding="8dp"
                    android:text="@string/question1"
                    android:textSize="@dimen/textSize"

                    />


                <RadioGroup
                    android:id="@+id/rg_question1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin">

                    <RadioButton
                        android:id="@+id/rb_1887"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/rb_1887"
                        android:textColor="@color/colorPrimaryDark" />

                    <RadioButton
                        android:id="@+id/rb_1867"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rb_1867"
                        android:textColor="@color/colorPrimaryDark" />

                    <RadioButton
                        android:id="@+id/rb_1992"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rb_1992"
                        android:textColor="@color/colorPrimaryDark" />
                </RadioGroup>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/linear_bottom_margin"
                android:background="#CCFF0000"
                android:orientation="vertical"
                android:padding="@dimen/linear_padding">


                <TextView
                    android:id="@+id/tv_question2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:padding="8dp"
                    android:text="@string/question2"
                    android:textSize="@dimen/textSize" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/cb_davidMoyes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onCheckQuestion2"
                        android:paddingLeft="@dimen/activity_check_box_padding"
                        android:paddingStart="@dimen/activity_check_box_padding"
                        android:text="@string/cb_davidMoyes" />

                    <CheckBox
                        android:id="@+id/cb_saf"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onCheckQuestion2"
                        android:paddingLeft="@dimen/activity_check_box_padding"
                        android:text="@string/cb_saf" />

                    <CheckBox
                        android:id="@+id/cb_arseneWenger"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onCheckQuestion2"
                        android:paddingLeft="@dimen/activity_check_box_padding"
                        android:text="@string/cb_arseneWenger" />

                    <CheckBox
                        android:id="@+id/cb_poch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onCheckQuestion2"
                        android:paddingLeft="@dimen/activity_check_box_padding"
                        android:text="@string/cb_poch" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/linear_bottom_margin"
                android:background="@android:color/holo_green_dark"
                android:orientation="vertical"
                android:padding="@dimen/linear_padding">

                <TextView
                    android:id="@+id/tv_question3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:padding="8dp"
                    android:text="@string/question3"
                    android:textAlignment="center"
                    android:textSize="@dimen/textSize" />

                <RadioGroup
                    android:id="@+id/rg_question3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin">

                    <RadioButton
                        android:id="@+id/rb_RedDevils"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rb_redDevils" />

                    <RadioButton
                        android:id="@+id/rb_BlueWasps"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rb_blueWasps" />

                    <RadioButton
                        android:id="@+id/rb_ThreeLions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rb_threeLions" />
                </RadioGroup>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/linear_bottom_margin"
                android:background="@android:color/holo_purple"
                android:orientation="vertical"
                android:padding="@dimen/linear_padding">

                <TextView
                    android:id="@+id/tv_question4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:padding="8dp"
                    android:text="@string/question4"
                    android:textSize="@dimen/textSize" />

                <RadioGroup
                    android:id="@+id/rg_question4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin">

                    <RadioButton
                        android:id="@+id/rb_oldTrafford"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rb_oldTrafford" />

                    <RadioButton
                        android:id="@+id/rbStamfordBridge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rb_stamfordBridge" />

                    <RadioButton
                        android:id="@+id/rbEtihad"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rb_etihad" />
                </RadioGroup>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/linear_bottom_margin"
                android:background="@android:color/holo_orange_light"
                android:orientation="vertical"
                android:padding="@dimen/linear_padding">


                <TextView
                    android:id="@+id/tv_question5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:padding="8dp"
                    android:text="@string/question5"
                    android:textSize="@dimen/textSize" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/cb_dwight_yorke"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onCheckQuestion5"
                        android:paddingLeft="@dimen/activity_check_box_padding"
                        android:text="@string/cb_dwight" />

                    <CheckBox
                        android:id="@+id/cb_bob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onCheckQuestion5"
                        android:paddingLeft="@dimen/activity_check_box_padding"
                        android:paddingStart="@dimen/activity_check_box_padding"
                        android:text="@string/cb_bob" />

                    <CheckBox
                        android:id="@+id/cb_willian"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onCheckQuestion5"
                        android:paddingLeft="@dimen/activity_check_box_padding"
                        android:text="@string/willian" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_blue_dark"
                android:onClick="submitAnswer"
                android:text="@string/Submit" />
        </LinearLayout>


    </ScrollView>



















</LinearLayout>